--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-NEXT_PUBLIC_OPENID_CLIENT_ID=SynopticumSPA
-NEXT_PUBLIC_OPENID_SCOPE='openid profile email'
-NEXT_PUBLIC_OPENID_RESPONSE_TYPE=code
-NEXT_PUBLIC_OPENID_IDENTITY_PROVIDER_LOGIN_URL=https://localhost:7000/login
-NEXT_PUBLIC_REDIRECT_URI=http://localhost:3000/pages/account/callback
+# what does not have "NEXT_" prefix, won't be accessible to the web app
 
-OPENID_CLIENT_SECRET=  # TODO fill
-# does not have "NEXT_" prefix so won't be accessible to the web app
+NEXTAUTH_URL=http://localhost:9000/
+
+KEYCLOAK_ID=synopticum-spa
+KEYCLOAK_SECRET="..."
+KEYCLOAK_ISSUER="http://localhost:8080/realms/Synopticum"
