--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # what does not have "NEXT_" prefix, won't be accessible to the web app
 
-NEXTAUTH_URL=http://localhost:9000/
+NEXTAUTH_URL=http://localhost:9000
 
 KEYCLOAK_ID=synopticum-spa
 KEYCLOAK_SECRET="..."
