Implement Synopticum API Client - add endpoints for Getting and Posting the Forecasts

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # what does not have "NEXT_" prefix, won't be accessible to the web app
 
+NEXT_PUBLIC_SYNOPTICUM_API_BASEURL=https://localhost:7000
+
 NEXTAUTH_URL=http://localhost:9000
 
 KEYCLOAK_ID=synopticum-spa
