--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/material": "^6.2.0",
     "@mui/x-data-grid": "^7.23.2",
     "axios": "^1.7.8",
+    "formik": "^2.4.6",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
